# computer-use-agents

./: .env.example  .gitignore  HOW_SMART_CLICK_WORKS.md  Procfile  QUICKSTART.md  README.md  agent.py  backtest_ensemble.py  backtest_timeseries.py  computer_control.py  demo_smart_click.py  element_detector.py  example_usage.py  pyproject.toml  railway.toml  requirements.txt  run_backtest.py  screenshot_capture.py  vision_analyzer.py
backtest_data/: alpha_report.json  ensemble_backtest.json  live_predictions.json  timeseries_backtest.json
backtest_data/results/: iteration_1.json  iteration_2.json  iteration_3.json  iteration_4.json  iteration_5.json  iteration_6.json  iteration_7.json  iteration_8.json  iteration_9.json
kalshi_trader/: .env.example  __init__.py  __main__.py  alpha_engine.py  analyst.py  backtester.py  config.py  kalshi_client.py  main.py  models.py  predictor.py  requirements.txt  runner.py  strategy.py  tracker.py
kalshi_trader/dashboard/: app.py
